# MatchCore-C-20-Limit-Order-Matching-Engine

./: .gitignore  CMakeLists.txt  README.md
include/book/: limit_order_book.hpp  price_level_book.hpp
include/core/: order_entry.hpp  order_types.hpp  trading_side.hpp
include/execution/: execution.hpp  execution_report.hpp
include/requests/: common_types.hpp  modify_request.hpp
src/: limit_order_book.cpp  main.cpp
tests/: orderbook_test.cpp
